@@ -1,4 +1,4 @@
-build.ver=1.2.2
+build.ver=1.2.3
 build.name=bb-ant-tools
 
 build.jar.file=${build.name}.jar
