@@ -1,3 +1,9 @@
+2009-07-08 Josh Kropf <josh@slashdev.ca>
+
+   * JadtoolTask.java: <jadtool> task was updating element overrides but not
+     adding new ones.
+
+
 2009-07-03 Josh Kropf <josh@slashdev.ca>
 
    * docs.txt: update documentation for <entry> element to make it clear
